# hcalc

./: CMakeLists.txt  Makefile  README.md  chars.xpm  draw.c  face.xpm  hcalc-icon.xpm  hcalc.c  hcalc.h  images.c  input.c  setupx.c
